--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li class="nav-item active"> <a class="nav-link" href="index.html">一念之间<span
                                 class="sr-only">(current)</span></a> </li>
                     <li class="nav-item"> <a class="nav-link" href="travel.html">旅行</a> </li>
-                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink"
-                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 作品 </a>
+                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>作品</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> <a class="dropdown-item"
                                 href="photography.html">光影</a> <a class="dropdown-item" href="animation.html">动画</a> <a
                                 class="dropdown-item" href="film.html">短片</a> </div>
