--- a/animation.html
+++ b/animation.html
@@ -21,9 +21,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a class="nav-link" href="index.html">一念之间</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="travel.html">旅行</a> </li>
-                    <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle"
+                    <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> 作品<span class="sr-only">(current)</span></a>
+                            aria-expanded="false">作品<span class="sr-only">(current)</span></a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> <a class="dropdown-item"
                                 href="photography.html">光影</a> <a class="dropdown-item" href="animation.html">动画</a> <a
                                 class="dropdown-item" href="film.html">短片</a> </div>
