--- a/film.html
+++ b/film.html
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a class="nav-link" href="index.html">一念之间</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="travel.html">旅行</a> </li>
-                    <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle"
+                    <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">作品</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> <a class="dropdown-item"
