--- a/animation.html
+++ b/animation.html
@@ -23,10 +23,11 @@
                     <li class="nav-item"> <a class="nav-link" href="travel.html">旅行</a> </li>
                     <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">作品<span class="sr-only">(current)</span></a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> <a class="dropdown-item"
-                                href="photography.html">光影</a> <a class="dropdown-item" href="animation.html">动画</a> <a
-                                class="dropdown-item" href="film.html">短片</a> </div>
+                            aria-expanded="false">作品</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="photography.html">光影</a>
+                            <a class="dropdown-item" href="animation.html">动画<span class="sr-only">(current)</span></a>
+                            <a class="dropdown-item" href="film.html">短片</a> </div>
                     </li>
                     <li class="nav-item"> <a class="nav-link" href="Real me.html">Real me</a> </li>
                 </ul>
