--- a/film.html
+++ b/film.html
@@ -52,8 +52,11 @@
                     </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <iframe src="https://player.bilibili.com/player.html?aid=39478097&cid=69360995&page=1"
-                        scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item"
+                            src="https://player.bilibili.com/player.html?aid=39478097&cid=69360995&page=1"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <hr class="featurette-divider">
