--- a/film.html
+++ b/film.html
@@ -55,7 +55,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item"
                             src="https://player.bilibili.com/player.html?aid=39478097&cid=69360995&page=1"
-                            allowfullscreen></iframe>
+                            allowfullscreen="true"></iframe>
                     </div>
                 </div>
             </div>
