--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 blog-main">
-                    <h3 class="pb-4 mb-4 mt-4 font-italic border-bottom">一念之间</h3>
+                <div class="col-md-12 mt-4 blog-main">
+                        <hr>
+                    <!-- <h3 class="pb-4 mb-4 mt-4 border-bottom">一念之间</h3> -->
                     <div class="blog-post">
-                        <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-                        <p>This blog post shows a few different types of content that’s supported and styled with
-                            Bootstrap. Basic typography, images, and code are all supported.</p>
+                        <p>一念之间的东西好微妙啊</p>
+                        <small class="text-muted">2019年9月22日</small>
                         <hr>
                     </div>
                 </div>
