--- a/film.html
+++ b/film.html
@@ -7,7 +7,7 @@
     <title>Xin-Scarecrow | 短片</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -42,7 +42,8 @@
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                     <h3 class="featurette-heading">巡礼2018 X SPST@ShanghaiTech</h3>
-                    <p>化用了一些生活中的遇到的有趣的事情，这里感谢提供这些事情的人。<br>
+                    <p>
+                        化用了一些生活中的遇到的有趣的事情，这里感谢提供这些事情的人。<br>
                         另外，因为喜欢 <a href="https://www.imdb.com/title/tt7668870/" target="_blank"
                             rel="noopener noreferrer">Searching</a> <a href="https://movie.douban.com/subject/27615441/"
                             target="_blank" rel="noopener noreferrer">「网络迷踪」</a> 这部电影，所以有了开头的构想。</p>
@@ -54,10 +55,60 @@
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item"
-                            src="https://player.bilibili.com/player.html?aid=39478097&cid=69360995&page=1"
-                            allowfullscreen="true"></iframe>
+                        <video src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e7/f0/7f00ae9946838f991885f4bdc627/0ded0dc5-7806-458c-9551-2fd34526ac9e-B.mp4" controls poster="images/巡礼2018 X SPST@ShanghaiTech.png"></video>
                     </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">研招宣传片 X SPST@ShanghaiTech</h3>
+                    <p>
+                        借由制作这个宣传片的机会，近距离的接触了学术界大佬。<br>
+                        不过，也没啥交谈，仅限定在了「OK，开始拍摄了」。<br>
+                        很难界定，花时间在这些事情上能给我带来什么机遇。也许会有那么一些转折，也可能什么都没有。但我还是乐意做这些事情，大抵就是乐在其中吧。<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video
+                            src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e6/9f/6770d4c74605aea9272a0cdb10d9/cd8d86dc-6617-464c-a481-83aa77e1579d-B.mp4"
+                            controls></video>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">新年祝福 X SPST@ShanghaiTech</h3>
+                    <p>
+                        2017年与2018年更替之际的一个作品，也是开始有想剪一些精彩画面的念头。<br>
+                        这段视频大概花了一个月的时间。主要的时间用在找各位PI拍摄的过程，最后的剪辑其实很快，一天就粗剪完了。随后便是细节上的调整，人物的先后次序，彩蛋是否合适，关于这些讨论了很多，最后敲定了目前的这个样子。<br>
+                        临近元旦前的一晚，在行政办公室，做完了最后的调整，视频上线，我也得以被放回了家。<br>
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video
+                            src="http://spst.shanghaitech.edu.cn/_upload/article/videos/5b/0b/8afca8264a0486b5c362a8890588/8336d1cc-3f5f-4633-9255-826fa3036697-B.mp4"
+                            controls></video>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">Room.329 X 元旦联欢会</h3>
+                    <p>
+                        这应该算是我的第一个剪辑作品。<br>
+                        形式大概是部分消声的影视剧画面，搭配上我们的故事台词，现场配音演绎。<br>
+                        现在回头看，也不知道自己当时是怎么说服自己，这是一个完整的故事。但确实我们就这样子做了，还演绎了。<br>
+                        这也就是所说的一念之间，然后努力的去实现的事情吧。<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/一高名师 魏平安.png" alt="一高名师 魏平安"><br>
+                    <small class="text-muted">视频就不放了，自己娱乐而已。给个截图，聊以想象。</small>
                 </div>
             </div>
             <hr class="featurette-divider">
