--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mt-4 blog-main">
+                    <hr>
+                    <div class="blog-post">
+                        <p>时常在想，生活中会有哪些不期而遇的事情。</p>
+                        <small class="text-muted">2019年9月25日</small>
                         <hr>
-                    <!-- <h3 class="pb-4 mb-4 mt-4 border-bottom">一念之间</h3> -->
+                    </div>
+                    <hr>
                     <div class="blog-post">
                         <p>一念之间的东西好微妙啊</p>
                         <small class="text-muted">2019年9月22日</small>
