--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Xin-Scarecrow | 一念之间</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -26,9 +26,9 @@
                     <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">作品</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
-                            <a class="dropdown-item" href="photography.html">光影</a> 
-                            <a class="dropdown-item" href="animation.html">动画</a> 
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="photography.html">光影</a>
+                            <a class="dropdown-item" href="animation.html">动画</a>
                             <a class="dropdown-item" href="film.html">短片</a> </div>
                     </li>
                     <li class="nav-item"> <a class="nav-link" href="Real me.html">Real me</a> </li>
@@ -93,8 +93,9 @@
     </main>
     <footer class="mt-auto">
         <hr>
-        <div class="container"> <img src="images/icon-dark.png" alt="icon" width="10%"> <small class="text-muted">&copy;
-                2019 Xin-Scarecrow.All rights reserved.Designed by Yuxin_H.</small>
+        <div class="container"> <img src="images/icon-dark.png" alt="icon" width="10%">
+            <small class="text-muted">&copy;
+                2019 Xin-Scarecrow. All rights reserved. <br>Designed by Yuxin_H.</small>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
