--- a/Real me.html
+++ b/Real me.html
@@ -40,7 +40,8 @@
         <hr>
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="10%">
-            <small class="text-muted">&copy; 2019 Xin-Scarecrow.All rights reserved.Designed by Yuxin_H.</small>
+            <small class="text-muted">&copy;
+                    2019 Xin-Scarecrow. All rights reserved. <br>Designed by Yuxin_H.</small>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
