--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
     </main>
     <footer class="mt-auto">
         <hr>
-        <div class="container"> <img src="images/icon-dark.png" alt="icon" width="10%">
-            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-            <small class="text-muted text-center">Designed by Yuxin_H.</small>
+        <div class="container">
+            <img src="images/icon-dark.png" alt="icon" width="10%">
+            <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
+            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
