--- a/travel.html
+++ b/travel.html
@@ -64,10 +64,10 @@
     <footer class="mt-auto">
         <hr>
         <div class="container">
-            <img src="images/icon-dark.png" alt="icon" width="10%">
-            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-            <small class="text-muted text-center">Designed by Yuxin_H.</small>
-            <p class="text-right"><a href="#">Back to top</a></p>
+                <img src="images/icon-dark.png" alt="icon" width="10%">
+                <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
+                <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+                <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
