--- a/animation.html
+++ b/animation.html
@@ -7,7 +7,7 @@
     <title>Xin-Scarecrow | 动画</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -35,14 +35,34 @@
             </div>
         </nav>
     </header>
-    <main role="main"></main>
+    <main role="main">
+        <div class="container">
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">Xin-Scarecrow Pictures「鑫草人制作」</h3>
+                    <p>
+                        大言不惭的给自己起了个「Xin-Scarecrow Pictures」的名头，以此激励自己做得更好些吧。<br>
+                        毕竟是开始要有自己品牌形象的人了，要是不好好练习技术，就会毁掉自己的Reputation咯。<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video src="videos/Xin-Scarecrow Pictures.mov" controls
+                            poster="images/Xin-Scarecrow Pictures.png"></video>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+        </div>
+    </main>
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="images/icon-dark.png" alt="icon" width="10%">
-                <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
-                <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
-                <p class="text-right"><a href="#">Back to top</a></p>
+            <img src="images/icon-dark.png" alt="icon" width="10%">
+            <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
+            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+            <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
