--- a/film.html
+++ b/film.html
@@ -46,34 +46,77 @@
                         化用了一些生活中的遇到的有趣的事情，这里感谢提供这些事情的人。<br>
                         另外，因为喜欢 <a href="https://www.imdb.com/title/tt7668870/" target="_blank"
                             rel="noopener noreferrer">Searching</a> <a href="https://movie.douban.com/subject/27615441/"
-                            target="_blank" rel="noopener noreferrer">「网络迷踪」</a> 这部电影，所以有了开头的构想。</p>
+                            target="_blank" rel="noopener noreferrer">「网络迷踪」</a> 这部电影，所以有了开头的构想。<br></p>
                     <p>
-                        BGM：<a href="http://music.163.com/#/m/song?id=28481787" target="_blank">Red - Rob
+                        BGM：<a href="https://music.163.com/song?id=28481787" target="_blank">Red - Rob
                             Simonsen</a><br>
                         每一天，都有更多的人为我们的生活创造乐趣。<br>
                     </p>
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <video src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e7/f0/7f00ae9946838f991885f4bdc627/0ded0dc5-7806-458c-9551-2fd34526ac9e-B.mp4" controls poster="images/巡礼2018 X SPST@ShanghaiTech.png"></video>
+                        <video
+                            src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e7/f0/7f00ae9946838f991885f4bdc627/0ded0dc5-7806-458c-9551-2fd34526ac9e-B.mp4"
+                            controls poster="images/巡礼2018 X SPST@ShanghaiTech.png"></video>
                     </div>
                 </div>
             </div>
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h3 class="featurette-heading">研招宣传片 X SPST@ShanghaiTech</h3>
+                    <h3 class="featurette-heading">Johan "N0tail" Sundstein X OG@TI8</h3>
+                    <p>
+                        这是V社（Valve）出品的TI8真视界中片尾的一段。在发布的那一天，我看到这里的时候，被N0tail的这段话打动到了。<br>
+                        我也在想，如果有一天，我若是生活的极为精彩，那么其他的事情，亦皆为浮云。<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video
+                            src='videos/Johan "N0tail" Sundstein X OG@TI8.mov'
+                            controls poster='images/Johan "N0tail" Sundstein X OG@TI8.png'></video>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">毕业 X SPST@ShanghaiTech</h3>
+                    <p>
+                        毕业，该是一件特别愉快的事情。<br>
+                        我在想，是不是因为花了力气在做这个短片的缘故，让我把本可以用在派对上的热情，提前耗尽了。<br>
+                        一年后，我的学弟学妹们毕业，我真切地才感受到了毕业时的欢乐。<br>
+                    </p>
+                    <p>
+                        PS：本来也想上传的，只是涉及太多同学的黑历史，算了吧。放个马马虎虎的开头好了。
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video src="videos/毕业 X SPST@ShanghaiTech.mp4" controls
+                            poster="images/毕业 X SPST@ShanghaiTech.png"></video>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">研招宣传 X SPST@ShanghaiTech</h3>
                     <p>
                         借由制作这个宣传片的机会，近距离的接触了学术界大佬。<br>
                         不过，也没啥交谈，仅限定在了「OK，开始拍摄了」。<br>
                         很难界定，花时间在这些事情上能给我带来什么机遇。也许会有那么一些转折，也可能什么都没有。但我还是乐意做这些事情，大抵就是乐在其中吧。<br>
+                    </p>
+                    <p>
+                        BGM：<a href="https://music.163.com/song?id=27903692" target="_blank">Radioactive - William
+                            Joseph</a><br>
                     </p>
                 </div>
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e6/9f/6770d4c74605aea9272a0cdb10d9/cd8d86dc-6617-464c-a481-83aa77e1579d-B.mp4"
-                            controls></video>
+                            controls poster="images/研招宣传 X SPST@ShanghaiTech.jpeg"></video>
                     </div>
                 </div>
             </div>
@@ -86,12 +129,16 @@
                         这段视频大概花了一个月的时间。主要的时间用在找各位PI拍摄的过程，最后的剪辑其实很快，一天就粗剪完了。随后便是细节上的调整，人物的先后次序，彩蛋是否合适，关于这些讨论了很多，最后敲定了目前的这个样子。<br>
                         临近元旦前的一晚，在行政办公室，做完了最后的调整，视频上线，我也得以被放回了家。<br>
                     </p>
+                    <p>
+                        BGM：<a href="https://music.163.com/song?id=20733975" target="_blank">Viva La Vida - Vitamin
+                            String Quartet</a>
+                    </p>
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/5b/0b/8afca8264a0486b5c362a8890588/8336d1cc-3f5f-4633-9255-826fa3036697-B.mp4"
-                            controls></video>
+                            controls poster="images/新年祝福 X SPST@ShanghaiTech.jpeg"></video>
                     </div>
                 </div>
             </div>
@@ -105,10 +152,10 @@
                         现在回头看，也不知道自己当时是怎么说服自己，这是一个完整的故事。但确实我们就这样子做了，还演绎了。<br>
                         这也就是所说的一念之间，然后努力的去实现的事情吧。<br>
                     </p>
+                    <p>PS：视频就不放了，班级娱乐而已。</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="images/一高名师 魏平安.png" alt="一高名师 魏平安"><br>
-                    <small class="text-muted">视频就不放了，自己娱乐而已。给个截图，聊以想象。</small>
+                    <img src="images/一高名师 魏平安.png" alt="一高名师 魏平安">
                 </div>
             </div>
             <hr class="featurette-divider">
