--- a/film.html
+++ b/film.html
@@ -73,7 +73,7 @@
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
-                            src='videos/Johan "N0tail" Sundstein X OG@TI8.mov'
+                            src='videos/Johan "N0tail" Sundstein X OG@TI8.m4v'
                             controls poster='images/Johan "N0tail" Sundstein X OG@TI8.png'></video>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <video src="videos/毕业 X SPST@ShanghaiTech.mp4" controls
+                        <video src="videos/毕业 X SPST@ShanghaiTech.mov" controls
                             poster="images/毕业 X SPST@ShanghaiTech.png"></video>
                     </div>
                 </div>
