--- a/animation.html
+++ b/animation.html
@@ -37,6 +37,22 @@
     </header>
     <main role="main">
         <div class="container">
+                <hr class="featurette-divider">
+                <div class="row featurette">
+                    <div class="col-md-7 order-md-2">
+                        <h3 class="featurette-heading">Xin-Scarecrow Pictures「鑫草人制作」</h3>
+                        <p>
+                            大言不惭的给自己起了个「Xin-Scarecrow Pictures」的名头，以此激励自己做得更好些吧。<br>
+                            毕竟是开始要有自己品牌形象的人了，要是不好好练习技术，就会毁掉自己的Reputation咯。<br>
+                        </p>
+                    </div>
+                    <div class="col-md-5 order-md-1">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <video src="videos/Xin-Scarecrow Pictures.mov" controls
+                                poster="images/Xin-Scarecrow Pictures.png"></video>
+                        </div>
+                    </div>
+                </div>
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7">
