--- a/animation.html
+++ b/animation.html
@@ -40,16 +40,14 @@
                 <hr class="featurette-divider">
                 <div class="row featurette">
                     <div class="col-md-7 order-md-2">
-                        <h3 class="featurette-heading">Xin-Scarecrow Pictures「鑫草人制作」</h3>
+                        <h3 class="featurette-heading">作业</h3>
                         <p>
-                            大言不惭的给自己起了个「Xin-Scarecrow Pictures」的名头，以此激励自己做得更好些吧。<br>
-                            毕竟是开始要有自己品牌形象的人了，要是不好好练习技术，就会毁掉自己的Reputation咯。<br>
+                            微博流行的一张右下角独坐一人的大面积留白图。然后，很多人情侣在此基础上做了创作。不例外的，我也交了作业。
                         </p>
                     </div>
                     <div class="col-md-5 order-md-1">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <video src="videos/Xin-Scarecrow Pictures.mov" controls
-                                poster="images/Xin-Scarecrow Pictures.png"></video>
+                            <video src="videos/作业.mp4" controls preload="none"></video>
                         </div>
                     </div>
                 </div>
@@ -65,7 +63,7 @@
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video src="videos/Xin-Scarecrow Pictures.mov" controls
-                            poster="images/Xin-Scarecrow Pictures.png"></video>
+                            poster="images/Xin-Scarecrow Pictures.png" preload="none"></video>
                     </div>
                 </div>
             </div>
