--- a/film.html
+++ b/film.html
@@ -57,7 +57,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e7/f0/7f00ae9946838f991885f4bdc627/0ded0dc5-7806-458c-9551-2fd34526ac9e-B.mp4"
-                            controls poster="images/巡礼2018 X SPST@ShanghaiTech.png"></video>
+                            controls poster="images/巡礼2018 X SPST@ShanghaiTech.png" preload="none"></video>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src='videos/Johan "N0tail" Sundstein X OG@TI8.mp4'
-                            controls poster='images/Johan "N0tail" Sundstein X OG@TI8.png'></video>
+                            controls poster='images/Johan "N0tail" Sundstein X OG@TI8.png' preload="none"></video>
                     </div>
                 </div>
             </div>
@@ -93,8 +93,8 @@
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <video src="videos/毕业 X SPST@ShanghaiTech.mp4" controls
-                            poster="images/毕业 X SPST@ShanghaiTech.png"></video>
+                        <video src="videos/毕业 X SPST@ShanghaiTech.mp4" controls 
+                            poster="images/毕业 X SPST@ShanghaiTech.png" preload="none"></video>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e6/9f/6770d4c74605aea9272a0cdb10d9/cd8d86dc-6617-464c-a481-83aa77e1579d-B.mp4"
-                            controls poster="images/研招宣传 X SPST@ShanghaiTech.jpeg"></video>
+                            controls poster="images/研招宣传 X SPST@ShanghaiTech.jpeg" preload="none"></video>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/5b/0b/8afca8264a0486b5c362a8890588/8336d1cc-3f5f-4633-9255-826fa3036697-B.mp4"
-                            controls poster="images/新年祝福 X SPST@ShanghaiTech.jpeg"></video>
+                            controls poster="images/新年祝福 X SPST@ShanghaiTech.jpeg" preload="none"></video>
                     </div>
                 </div>
             </div>
