--- a/animation.html
+++ b/animation.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-md-5 order-md-1">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <video src="videos/作业.mp4" controls preload="none"></video>
+                            <video src="videos/作业.mp4" controls preload="none" poster="images/作业.png"></video>
                         </div>
                     </div>
                 </div>
