--- a/animation.html
+++ b/animation.html
@@ -42,7 +42,9 @@
                     <div class="col-md-7 order-md-2">
                         <h3 class="featurette-heading">作业</h3>
                         <p>
-                            微博流行的一张右下角独坐一人的大面积留白图。然后，很多人情侣在此基础上做了创作。不例外的，我也交了作业。
+                            微博流行的一张右下角独坐一人的大面积留白图。<br>
+                            然后，很多人情侣在此基础上做了创作。<br>
+                            不例外的，我也交了作业。<br>
                         </p>
                     </div>
                     <div class="col-md-5 order-md-1">
