--- a/animation.html
+++ b/animation.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col-md-5 order-md-1">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <video src="videos/作业.mp4" controls preload="none" poster="images/作业.png"></video>
+                            <video src="videos/作业.mp4" controls poster="images/作业.png"></video>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video src="videos/Xin-Scarecrow Pictures.mov" controls
-                            poster="images/Xin-Scarecrow Pictures.png" preload="none"></video>
+                            poster="images/Xin-Scarecrow Pictures.png"></video>
                     </div>
                 </div>
             </div>
