--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/KID_M24.jpg" alt="KID_M24">
+                        src="images/莫干山.jpeg" alt="莫干山">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h6>明媚</h6>
+                            <h6>莫干山</h6>
                         </div>
                     </div>
                 </div>
