--- a/animation.html
+++ b/animation.html
@@ -36,23 +36,29 @@
         </nav>
     </header>
     <main role="main">
+        <section class="jumbotron text-center">
+            <div class="container">
+                <h1 class="jumbotron-heading">动画</h1>
+                <p class="lead text-muted"></p>
+            </div>
+        </section>
         <div class="container">
-                <hr class="featurette-divider">
-                <div class="row featurette">
-                    <div class="col-md-7 order-md-2">
-                        <h3 class="featurette-heading">作业</h3>
-                        <p>
-                            微博流行的一张右下角独坐一人的大面积留白图。<br>
-                            然后，很多人情侣在此基础上做了创作。<br>
-                            不例外的，我也交了作业。<br>
-                        </p>
-                    </div>
-                    <div class="col-md-5 order-md-1">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <video src="videos/作业.mp4" controls poster="images/作业.png"></video>
-                        </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">作业</h3>
+                    <p>
+                        微博流行的一张右下角独坐一人的大面积留白图。<br>
+                        然后，很多人情侣在此基础上做了创作。<br>
+                        不例外的，我也交了作业。<br>
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video src="videos/作业.mp4" controls poster="images/作业.png"></video>
                     </div>
                 </div>
+            </div>
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7">
