--- a/photography.html
+++ b/photography.html
@@ -43,48 +43,60 @@
                 <p class="lead text-muted"></p>
             </div>
         </section>
-        <div class="album">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <img src="images/作业.png" alt="">
-                            <div class="card-body">
-                                <p class="card-text"></p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <small class="text-muted">10 张</small>
+        <div class="container">
+            <div class="card-columns">
+                <div class="card">
+                    <img src="images/作业.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">View</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                                aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <img src="images/研招宣传 X SPST@ShanghaiTech.jpeg" class="rounded img-fluid" alt="">
+                                            <img src="images/毕业 X SPST@ShanghaiTech.png" class="rounded img-fluid" alt="">
+                                            <img src="images/新年祝福 X SPST@ShanghaiTech.jpeg" class="rounded img-fluid" alt="">
+                                            <img src="images/莫干山.jpeg" class="rounded img-fluid" alt="">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <small class="text-muted">10 张</small>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <img src="images/作业.png" alt="">
-                            <div class="card-body">
-                                <p class="card-text"></p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <small class="text-muted">10 张</small>
-                                </div>
-                            </div>
+                </div>
+                <div class="card">
+                    <img src='images/Johan "N0tail" Sundstein X OG@TI8.png' class="card-img-top" alt="">
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <small class="text-muted">10 张</small>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <img src="images/作业.png" alt="">
-                            <div class="card-body">
-                                <p class="card-text"></p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <small class="text-muted">10 张</small>
-                                </div>
-                            </div>
+                </div>
+                <div class="card">
+                    <img src="images/一高名师 魏平安.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <small class="text-muted">10 张</small>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+
     </main>
     <footer class="mt-auto">
         <hr>
