--- a/photography.html
+++ b/photography.html
@@ -50,11 +50,9 @@
                     <div class="card-body">
                         <p class="card-text"></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <small class="text-muted">10 张</small>
                             </div>
-                            <small class="text-muted">10 张</small>
-                        </div>
                     </div>
                 </div>
                 <div class="card">
