--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/莫干山.jpeg" alt="莫干山">
+                        src="images/banner/莫干山.jpeg" alt="莫干山">
                     <div class="container">
                         <div class="carousel-caption">
                             <h6>莫干山</h6>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="carousel-item"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/Cloud.jpg" alt="Cloud">
+                        src="images/banner/Cloud.jpg" alt="Cloud">
                     <div class="container">
                         <div class="carousel-caption">
                             <h6>飞云之上</h6>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="carousel-item"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/因为风的缘故.jpg" alt="因为风的缘故">
+                        src="images/banner/因为风的缘故.jpg" alt="因为风的缘故">
                     <div class="container">
                         <div class="carousel-caption">
                             <h6>洛夫</h6>
