--- a/animation.html
+++ b/animation.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <video src="videos/作业.mp4" controls poster="images/作业.png"></video>
+                        <video src="videos/animation/作业.mp4" controls poster="images/poster/作业.png"></video>
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
                 </div>
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <video src="videos/Xin-Scarecrow Pictures.mov" controls
-                            poster="images/Xin-Scarecrow Pictures.png"></video>
+                        <video src="videos/animation/Xin-Scarecrow Pictures.mov" controls
+                            poster="images/poster/Xin-Scarecrow Pictures.png"></video>
                     </div>
                 </div>
             </div>
