--- a/photography.html
+++ b/photography.html
@@ -46,36 +46,43 @@
         <div class="container">
             <div class="card-columns">
                 <div class="card">
-                    <img src="images/作业.png" class="card-img-top" alt="">
+                    <img src="" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text"></p>
                         <div class="d-flex justify-content-between align-items-center">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <small class="text-muted">10 张</small>
-                            </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src='images/Johan "N0tail" Sundstein X OG@TI8.png' class="card-img-top" alt="">
-                    <div class="card-body">
-                        <p class="card-text"></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <small class="text-muted">10 张</small>
+                            <a href="" target="_blank" rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2019.10.01</small>
                         </div>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/一高名师 魏平安.png" class="card-img-top" alt="">
+                    <img src="" class="card-img-top" alt="">
                     <div class="card-body">
                         <p class="card-text"></p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <small class="text-muted">10 张</small>
+                            <a href="" target="_blank" rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2019.10.01</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <p class="card-text"></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="" target="_blank" rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2019.10.01</small>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
     </main>
     <footer class="mt-auto">
