--- a/film.html
+++ b/film.html
@@ -63,7 +63,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e7/f0/7f00ae9946838f991885f4bdc627/0ded0dc5-7806-458c-9551-2fd34526ac9e-B.mp4"
-                            controls poster="images/poster/巡礼2018 X SPST@ShanghaiTech.png" preload="metadata"></video>
+                            controls poster="images/poster/巡礼2018 X SPST@ShanghaiTech.jpg" preload="metadata"></video>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src='videos/film/Johan "N0tail" Sundstein X OG@TI8.mp4'
-                            controls poster='images/poster/"N0tail" Sundstein X OG@TI8.png' preload="metadata"></video>
+                            controls poster='images/poster/Johan "N0tail" Sundstein X OG@TI8.jpg' preload="metadata"></video>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <div class="col-md-5 order-md-1">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video src="videos/film/毕业 X SPST@ShanghaiTech.mp4" controls 
-                            poster="images/poster/毕业 X SPST@ShanghaiTech.png" preload="metadata"></video>
+                            poster="images/poster/毕业 X SPST@ShanghaiTech.jpg" preload="metadata"></video>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/e6/9f/6770d4c74605aea9272a0cdb10d9/cd8d86dc-6617-464c-a481-83aa77e1579d-B.mp4"
-                            controls poster="images/poster/研招宣传 X SPST@ShanghaiTech.jpeg" preload="metadata"></video>
+                            controls poster="images/poster/研招宣传 X SPST@ShanghaiTech.jpg" preload="metadata"></video>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
                             src="http://spst.shanghaitech.edu.cn/_upload/article/videos/5b/0b/8afca8264a0486b5c362a8890588/8336d1cc-3f5f-4633-9255-826fa3036697-B.mp4"
-                            controls poster="images/poster/新年祝福 X SPST@ShanghaiTech.jpeg" preload="metadata"></video>
+                            controls poster="images/poster/新年祝福 X SPST@ShanghaiTech.jpg" preload="metadata"></video>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                     <p>PS：视频就不放了，班级娱乐而已。</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="images/poster/一高名师.png" alt="一高名师">
+                    <img src="images/poster/一高名师.jpg" alt="一高名师">
                 </div>
             </div>
             <hr class="featurette-divider">
