--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/banner/莫干山.jpeg" alt="莫干山">
+                        src="images/banner/莫干山.jpg" alt="莫干山">
                     <div class="container">
                         <div class="carousel-caption">
                             <h6>莫干山</h6>
